src/test/deca/context/valid/rvalue_assign_int_to_float.deca
// Test of the rule (3.28): int assigned to a float

{
    float f = 3;    
}




// Resultat:
//# TODOTEST
