src/test/deca/context/invalid/inst_return_in_void_method_int.deca
// Test of the rule (3.24): not possible to return something
// when we are not expecting a return

class A  {
    void voidMethod(){
        return 5;
    }
}
